--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@graphql-tools/schema": "9.0.19",
     "graphql": "^16.6.0",
     "graphql-yoga": "^3.9.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.1.0"
   }
 }
